--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "edn",
   "version": "0.0.1",
-  "description": "serve and manage your content",
+  "description": "News syndicator",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -R landing test.js"
+  },
+  "devDependencies": {
+    "should": ">= 0.0.0"
   },
   "repository": "",
   "keywords": [
-    "media"
+    "rss",
+    "atom"
   ],
   "author": "Steve Hammond",
   "license": "Apache 2.0"
