--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "mocha -R landing test.js"
   },
+  "dependencies": {
+    "requirejs": ">= 2.1.5",
+    "optimist": ">= 0.4.0"
+  },
   "devDependencies": {
     "should": ">= 0.0.0"
   },
