--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "requirejs": ">= 2.1.5",
-    "optimist": ">= 0.4.0"
+    "optimist": ">= 0.4.0",
+	"redis": ">= 0.0.0"
   },
   "devDependencies": {
     "should": ">= 0.0.0"
