--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   "dependencies": {
     "requirejs": ">= 2.1.5",
     "optimist": ">= 0.4.0",
-	"redis": ">= 0.0.0"
+	"redis": ">= 0.1.7"
   },
   "devDependencies": {
+    "mocha": ">= 0.0.0",
     "should": ">= 0.0.0"
   },
   "repository": "",
